hphp/hack/test/typecheck/typed_locals/for-error.php.exp
File "for-error.php", line 7, characters 5-20:
Illegal definition of typed local variable $j. (Naming[2126])
  File "for-error.php", line 5, characters 1-2:
  It is already defined. Typed locals must have their type declared before they can be assigned.
File "for-error.php", line 8, characters 5-24:
Illegal definition of typed local variable $i. (Naming[2126])
  File "for-error.php", line 6, characters 5-6:
  It is already defined. Typed locals must have their type declared before they can be assigned.
File "for-error.php", line 6, characters 22-27:
Typing error (Typing[4110])
  File "for-error.php", line 11, characters 12-17:
  Expected `string`
  File "for-error.php", line 6, characters 27-27:
  But got `int`
File "for-error.php", line 13, characters 3-9:
Typing error (Typing[4110])
  File "for-error.php", line 10, characters 12-14:
  Expected `int`
  File "for-error.php", line 13, characters 8-9:
  But got `string`
